home.css
/* ... */
#alive {
  height: 100%;
  width: 100%;
  position: relative;
  background: url(alive2.png) no-repeat center center;
  background-size: 100%;
  border: 0;
}

.link {
  padding-left: 20px;
  line-height: 40px;
  display: inline;
  font-weight: bold;
}
.quote {
  line-height: 1.3;
  font-size: 10.7pt;
  color: rgb(190, 190, 190);
  width: 75%;
  margin: 0px auto;
  text-align: left;
  margin-top: -16px !important;
}
.title {
  font-family: outrun;
  line-height: 125%;
  color: red;
}
#memory {
  position: fixed;
  top: 5px;
  left: 10px;
  width: 40vw;
  height: 20vh;
  background-image: url("memory.png");
  background-size: 100% 100%;
}
#hole {
  position: fixed;
  top: 5px;
  right: 16vw;
  width: 25vw;
  height: 20vh;
  background-image: url("hole.png");
  background-size: 100% 100%;
}
#content {
  position: relative;
  top: 20px;
  width: 94%;
  margin: 0 auto;
  font-family: font;
  text-align: center;
  font-size: 13pt;
  color: rgb(195, 195, 195);
  text-shadow: 1px 0 3px black, 0 1px 3px black, -1px 0 3px black,
    0 -1px 3px black;
}
#landing {
  width: 94%;
  position: relative;
  font-family: font;
  text-align: center;
  font-size: 13pt;
  text-shadow: 1px 0 3px black, 0 1px 3px black, -1px 0 3px black,
    0 -1px 3px black;
  position: relative;
  bottom: -90vh;
  height: 50px;
  margin: 0 3% 0 3%;
  background: black;
  box-shadow: 0px 0px 100px 100px rgb(0, 0, 0), 0px 0px 60px 70px rgb(0, 0, 0);
}
#index {
  position: fixed;
  z-index: 12;
  top: 0px;
  right: 0px;
  width: 20px;
  min-height: 100%;
  padding: 0 20px 0 20px;
  overflow: auto;
  transition: all 0.4s linear 0s;
  -webkit-transition: all 0.4s linear 0s;
  -moz-transition: all 0.4s linear 0s;
  -ms-transition: all 0.4s linear 0s;
}
#wrapper {
  position: fixed;
  top: 0px;
  right: 40px;
  height: 100%;
  width: 0;
  padding: 0;
  margin: 0 auto;
}
#iframe {
  position: relative;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  border: 0;
}
.sections {
  font-size: 28pt;
  width: 99%;
  margin: 0 auto;
  padding: 35px 0 45px 0;
  font-family: outrun;
  color: red;
  text-shadow: 2px 2px 0 black, 2px 2px 0 black, 2px 2px 0 black,
    0 0 9px rgb(0, 100, 255), 0 0 33px rgb(0, 255, 255);
}
.line {
  z-index: 100;
  border-bottom: 1.2px solid rgb(200, 200, 200);
  margin-bottom: 10px;
}
#navbar {
  font-size: 20px;
  font-family: tele !important;
  letter-spacing: 2px;
  color: rgb(0, 240, 60);
  background-color: black;
  box-shadow: 0 0 20px black, 0 0 20px black, 0 0 20px black;
  margin-bottom: 9px;
}
#navbar a:hover {
  color: rgb(0, 255, 255);
}
p {
  position: relative;
  margin: 0 auto;
  text-align: center;
}
.cell2 {
  position: relative;
  font-size: 12pt;
  text-align: left;
  padding: 10px 35px 10px 42px;
  border-radius: 6px;
  border: 3.7px solid rgb(39, 34, 41);
  background: linear-gradient(to top right, rgb(20, 24, 41), rgb(8, 12, 28));
  line-height: 160%;
  transition: all 0.2s linear 0s;
  -webkit-transition: all 0.2s linear 0s;
  -moz-transition: all 0.2s linear 0s;
  -ms-transition: all 0.2s linear 0s;
}
.cell2:hover {
  background: linear-gradient(to top right, rgb(22, 26, 56), rgb(5, 10, 40));
  border-color: rgb(128, 53, 163);
  box-shadow: 0 0 13px rgb(75, 45, 98) inset, 0 0 28px rgb(85, 28, 140);
}
.cell2:hover .label2 {
  color: greenyellow;
}
.cell2:hover .label2:hover {
  color: greenyellow !important;
}
.cell2 a {
  color: rgb(180, 180, 180);
}
.cell2:hover a {
  color: rgb(243, 243, 243);
}
.cell2:hover a:hover {
  color: rgb(0, 240, 60);
}
.cell2 .caret::before {
  color: rgb(180, 180, 180);
}
.cell2:hover .caret::before {
  color: rgb(0, 240, 60);
}
.cell2:hover .caret:hover::before {
  color: rgb(255, 0, 183);
}
.cell2 .bullet::before {
  color: rgb(180, 180, 180);
}
.cell2:hover .bullet::before {
  color: rgb(0, 255, 255);
}
.head {
  font-weight: 100;
}
#container {
  width: 75%;
  margin: 0 auto;
}

a {
  color: inherit;
  background-color: inherit !important;
  text-decoration: none;
  transition: all 0.1s linear 0s;
}
a:hover {
  color: rgb(0, 240, 60);
}
/*
a{
    color: inherit;
    background-color: inherit !important;
    text-decoration: none;
}
a:hover{
    color: rgb(0,240,60);
}*/
ul {
  /*margin / padding-left: 0 = no indent*/
  list-style-type: none;
  border-radius: 11px 8px 8px 11px;
  text-shadow: 1px 0 1.5px black, 0 1px 1.5px black, -1px 0 1.5px black,
    0 -1px 1.5px black, 1px 0 1px black, 0 1px 1px black, -1px 0 1px black,
    0 -1px 1px black;
  font-weight: 300;
  -webkit-transition: all 0.55s ease-in-out 0s;
  -moz-transition: all 0.55s ease-in-out 0s;
  -ms-transition: all 0.55s ease-in-out 0s;
  transition: all 0.55s ease-in-out 0s;
}
li {
  position: relative;
  left: -20px;
  margin-right: -20px;
  margin-top: 1px;
  padding: 0 0 0 12px;
  -webkit-transition: all 0.52s ease-in-out 0s;
  -moz-transition: all 0.52s ease-in-out 0s;
  -ms-transition: all 0.52s ease-in-out 0s;
  transition: all 0.52s ease-in-out 0s;
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -o-transform: translateZ(0);
  transform: translateZ(0);
}
.sub1 > * {
  background-color: rgb(63, 63, 72);
  color: rgb(220, 220, 220);
}
.sub2 > * {
  background-color: rgb(43, 43, 52);
}
.sub3 > * {
  background-color: rgb(27, 27, 36);
}
.sub4 > * {
  background-color: rgb(11, 11, 20);
}
.list {
  padding-left: 5px;
  height: 0;
  width: 455px;
  position: absolute;
  right: 0px;
  transition: all 0.1s linear 0s;
  -webkit-transition: all 0.1s linear 0s;
  -moz-transition: all 0.1s linear 0s;
  -ms-transition: all 0.1s linear 0s;
}
.menu {
  position: absolute;
  right: 28px;
  top: 15px;
  z-index: 2;
  background-color: rgba(0, 0, 0, 0);
  font-size: 13pt;
  color: white;
  text-shadow: 1px 0 3px black, 0 1px 3px black, -1px 0 3px black,
    0 -1px 3px black;
  transition: all 0.1s linear 0s;
  -webkit-transition: all 0.1s linear 0s;
  -moz-transition: all 0.1s linear 0s;
  -ms-transition: all 0.1s linear 0s;
}
/* ... */

